--- a/src/components/womenempowerment/Womenempowerment.css
+++ b/src/components/womenempowerment/Womenempowerment.css
@@ -366,8 +366,9 @@
   }
 
   .women-image-row img {
-    width: 80px;
-    height: 65px;
+    width: 220px;
+    height: 220px;
+    margin: 13px 0 13px 0;
   }
 
   .stat-box h3 {
