--- a/src/components/visionmission/Visionmission.css
+++ b/src/components/visionmission/Visionmission.css
@@ -251,8 +251,8 @@
 }
 
 .vision-image-col img {
-  width: 400px;
-  height:400px;
+  width: 100%;
+  height:300px;
   border-radius: 12px;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
 }
