--- a/src/components/solution/Solution.css
+++ b/src/components/solution/Solution.css
@@ -63,7 +63,7 @@
   }
 
   .dm-sol-img-card {
-    max-width: 600px;
+    width: 600px;
   }
 
   .dm-sol-cta-button {
@@ -79,9 +79,12 @@
   }
 
   .dm-sol-img-card {
-    max-width: 450px;
     width: 100%;
     margin-bottom: 25px;
+    margin-left:auto;
+    margin-right:auto;
+    flex: 1;
+    margin-top:25px;
   }
 
   .dm-sol-cta-button {
@@ -89,6 +92,7 @@
     padding: 10px 25px;
   }
 }
+
 
 
 
