--- a/src/components/solution/Solution.css
+++ b/src/components/solution/Solution.css
@@ -12,7 +12,8 @@
 .dm-sol-img-card {
   width: 70%;
   height: 50%;
-  padding: 40px;
+  padding-bottom: 35px;
+  padding-top:35px;
 }
 
 .dm-sol-img-card:hover {
@@ -22,7 +23,7 @@
 
 .dm-sol-card-media {
   width: 800px;
-  height: 500px;
+  height: 600px;
   margin:20px 20px 20px 20px;
   border-radius: 20px;
   transition: transform 0.4s ease;
@@ -56,14 +57,18 @@
 
 /* ---------------- RESPONSIVE DESIGN ---------------- */
 
-/* Tablet view */
 @media (max-width: 768px) {
-  .dm-sol-wrapper {
-    padding: 40px 15px;
-  }
 
   .dm-sol-img-card {
-    width: 600px;
+    max-width: 800px;
+    margin: 30px;
+    padding: 0;
+  }
+
+  .dm-sol-img-card img{
+    height: 400px;
+    width: 400px;
+    margin: 50px 0 50px 0;
   }
 
   .dm-sol-cta-button {
@@ -74,24 +79,24 @@
 
 /* Mobile view */
 @media (max-width: 480px) {
-  .dm-sol-wrapper {
-    padding: 20px 10px;
-  }
 
   .dm-sol-img-card {
     width: 100%;
-    margin-bottom: 25px;
-    margin-left:auto;
-    margin-right:auto;
-    flex: 1;
-    margin-top:25px;
+    margin: -15px;
+    padding: 0;
+  }
+
+  .dm-sol-img-card img{
+    height: 250px;
+    width: 325px;
   }
 
   .dm-sol-cta-button {
     font-size: 0.95rem;
-    padding: 10px 25px;
-  }
+    padding: 10px 25px;
+  }
 }
+
 
 
 
