--- a/src/components/elder/Elder.css
+++ b/src/components/elder/Elder.css
@@ -24,7 +24,7 @@
   text-align: center;
   padding: 20px;
   margin: 40px;
-  color: rgb(169, 215, 19);
+  color: forestgreen;
   font-weight: bold;
   letter-spacing: 1px;
 }
@@ -50,7 +50,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 40px;
+  gap: 90px;
+  margin: 20px 40px 120px 40px;
 }
 
 .dm-eldr-row.reverse {
@@ -71,8 +72,8 @@
 
 .dm-eldr-poster img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: 400px;
+  object-fit: fill;
   display: block;
 }
 
