--- a/src/components/wealth/Wealth.css
+++ b/src/components/wealth/Wealth.css
@@ -197,8 +197,8 @@ body {
 }
 
 .row4 {
-  background-color: rgb(255, 123, 0);
-  color: navy;
+  background-color: navy;
+  color: white;
 }
 
 /* ---------- Footer ---------- */
