--- a/src/components/students/Students.css
+++ b/src/components/students/Students.css
@@ -67,9 +67,8 @@
 }
 
 .stu-page-image-box img {
-  width: 100%;
-  height: 400px;
-  object-fit: fill;
+  width: 320px;
+  height: 540px;
   border-radius: 20px;
   cursor: pointer;
 }
