--- a/src/components/entrepreneur/Entrepreneur.css
+++ b/src/components/entrepreneur/Entrepreneur.css
@@ -169,10 +169,10 @@
   /* Force image first on all sections */
   .entrepreneur-container .ent-left img,
   .entrepreneur-container .ent-right img {
-    order: 1;
-    width: 90%;
-    height: auto;
-    margin: 0 auto;
+    width:350px;
+    height:300px;
+    margin: 20px;
+    border-radius:30px;
   }
 
   .entrepreneur-container .ent-box-left,
@@ -217,9 +217,10 @@
 
   .entrepreneur-container .ent-left img,
   .entrepreneur-container .ent-right img {
-    width: 95%;
-    max-width: 280px;
-    height: auto;
+    width: 300px;
+    height:200px;
+    margin:20px;
+    border-radius:30px;
   }
 
   .entrepreneur-container .ent-box-left h1,
