--- a/src/components/family/Family.css
+++ b/src/components/family/Family.css
@@ -183,9 +183,9 @@ p {
 
 /* Step Image */
 .step-img img {
-  width: 100%;
-  max-width: 420px;
-  border-radius: 14px;
+  width: 400px;
+  height: 300px;
+  border-radius: 18px;
   box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.15);
   object-fit: cover;
   transition: transform 0.5s ease;
