--- a/src/components/family/Family.css
+++ b/src/components/family/Family.css
@@ -187,7 +187,7 @@ p {
   height: 300px;
   border-radius: 18px;
   box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.15);
-  object-fit: cover;
+  object-fit: fill;
   transition: transform 0.5s ease;
   cursor: pointer;
 }
