--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -512,7 +512,7 @@ body {
 
 .solution-card-img1 {
   width: 100%;
-  height: auto;
+  height: 600px;
   border-top: 1px solid #e0e0e0;
   transition: transform 0.3s ease;
   border-radius: 20px;
@@ -940,7 +940,7 @@ body {
   }
 
   .solution-card1{
-    padding-bottom: 20px;
+    padding-bottom: 0px;
   }
 
   .hero-image-container {
@@ -1092,7 +1092,6 @@ body {
   .solution-card1 {
     width: 90%;
     max-width: 360px;
-    padding-bottom: 20px;
   }
 
   .solution-card-title1 {
@@ -1312,7 +1311,6 @@ body {
   .solution-card1 {
     width: 100%;
     max-width: 300px;
-    padding-bottom: 20px;
   }
 
   .solution-card-content {
@@ -1385,8 +1383,6 @@ body {
 
   .solution-card-img1 {
     width: 100%;
-    height: auto;
-    object-fit: contain;
     border-radius: 20px;
   }
 }
