--- a/src/components/entrepreneur/Entrepreneur.css
+++ b/src/components/entrepreneur/Entrepreneur.css
@@ -218,8 +218,7 @@
 
   .entrepreneur-container .ent-left img,
   .entrepreneur-container .ent-right img {
-    width: 300px;
-    height:200px;
+    height:300px;
     margin:20px;
     border-radius:30px;
   }
@@ -228,6 +227,7 @@
   .entrepreneur-container .ent-right h1 {
     font-size: 16px;
     line-height: 1.9rem;
+    text-align:start;
   }
 
   .entrepreneur-container .entre-title {
