--- a/src/components/wealth/Wealth.css
+++ b/src/components/wealth/Wealth.css
@@ -114,7 +114,8 @@ body {
   grid-template-columns: 1fr 1fr;
   align-items: center;
   gap: 2rem;
-  padding: 3rem 20px;
+  padding:40px;
+  border-radius:40px;
 }
 
 .wealthy-row.wealthy-reverse .wealthy-image-col {
